# precommit-hooks-playground

./: .gitignore  .pre-commit-config.yaml  Makefile  handrolled_add.py  pyproject.toml
