[tool.poetry]
name = "precommit-hooks-playground"
description = ""
authors = ["Pritish Jadhav"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
numpy = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
